# 22s-pa03-girvan-newman-kaspereroy2

./: .gitignore  CMakeLists.txt  Graph.cpp  Graph.h  LinkedList.h  README.md  convertGML.py  main.cpp
data/: test.graphml
data/.ipynb_checkpoints/: 30barabasi-checkpoint.graphml
results/: football11.graphml  result.dot
src/: 30barabasi.graphml  GraphHandler.h  extension.ipynb  graphGen.ipynb  graphRecon.ipynb  main.cpp  output.graphml
src/.ipynb_checkpoints/: 30barabasi-checkpoint.graphml  graphRecon-checkpoint.ipynb  main-checkpoint.cpp
